<resources>
    <string name="app_name">CSETest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="engine">Engine</string>
    <string name="gearbox">Gearbox</string>
    <string name="body">Body</string>
    <string name="save">SAVE</string>
    <string name="load_picture">Load picture</string>
</resources>